feat: more registry type